[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools >= 61.0",
]

[project]
authors = [
    { email = "git.dzh5i@simplelogin.com", name = "Max Fatouros" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = []
description = "A collection of assorted utilites"
dynamic = [
    "version",
]
name = "mjaf"
readme = "README.md"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
]

[project.scripts]
mjaf = "mjaf.__main__:main"

[project.urls]

[tool.autopep8]
# Let isort handle imports
ignore = [
    "E401",
    "E402",
]

[tool.isort]
force_grid_wrap = 2
multi_line_output = 3

[tool.pytest.ini_options]
pythonpath = "."

[tool.setuptools.dynamic.version]
attr = "mjaf.__version__"

[tool.setuptools.packages.find]
include = [
    "mjaf",
    "mjaf.*",
]
